# guui

./: pyproject.toml
guui/: __init__.py
sample/: __init__.py  __main__.py
src/guui/: __init__.py  _bounds.py  app.py  label.py  layout.py  widget.py
tests/: __init__.py  test_app.py
